Utils: fix vertical text cursor movement

Fixes: QTCREATORBUG-33321
Change-Id: I1c2e71a1972cb5d02a8a04a8fd0a01436e620334
Reviewed-by: Orgad Shaneh <orgads@gmail.com>